# RendererTester

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
App/: CMakeLists.txt
App/include/App/: Application.hpp  Camera.hpp  ImGuiContext.hpp  ImGuiLib.hpp  Renderer.hpp  Window.hpp
App/include/Render/: Buffer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
App/src/: main.cpp
App/src/App/: Application.cpp  Camera.cpp  ImGuiContext.cpp  ImGuiLib.cpp  Renderer.cpp  Window.cpp
App/src/Render/: Buffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Core/: CMakeLists.txt
Core/include/Core/: Buffer.hpp  Core.hpp  Logger.hpp  Macro.hpp  Profilier.hpp  SmartPointers.hpp
Core/include/Math/: Common.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
Core/src/Core/: Buffer.cpp  Logger.cpp
Core/src/Math/: Math.cpp  Matrix.cpp  Quaternion.cpp  Vector.cpp
Libs/: CMakeLists.txt
Libs/glad/: CMakeLists.txt
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
