cmake_minimum_required(VERSION 3.16)

# ImGui Parameters
set(IMGUI_GLFW              ON)
set(IMGUI_OPENGL3           ON)
set(IMGUI_OPENGL3_LOADER    ON)

# GLFW Parameters
set(GLFW_BUILD_DOCS         OFF)
set(GLFW_INSTALL            OFF)

# ASSIMP Parameters
#set(ASSIMP_NO_EXPORT        ON)
#set(BUILD_STATIC_LIB        ON)
#set(BUILD_ASSIMP_TOOLS      ON)
#set(USE_SYSTEM_ASSIMP       ON)

FetchContent_Declare(
        spdlog
        GIT_REPOSITORY https://github.com/gabime/spdlog
        GIT_TAG 27cb4c76708608465c413f6d0e6b8d99a4d84302 # v1.14.1
)

#FetchContent_Declare(
#        assimp
#        GIT_REPOSITORY https://github.com/assimp/assimp
#        GIT_TAG 10df90ec144179f97803a382e4f07c0570665864 # v5.4.1
#)

FetchContent_Declare(
        glfw
        GIT_REPOSITORY https://github.com/glfw/glfw
        GIT_TAG 7b6aead9fb88b3623e3b3725ebb42670cbe4c579 # v3.4
)

FetchContent_Declare(
        imgui
        GIT_REPOSITORY https://github.com/Sayama3/ImGui
        GIT_TAG docking #docking branch
)

#FetchContent_MakeAvailable(spdlog assimp glfw imgui)
FetchContent_MakeAvailable(spdlog glfw imgui)

target_link_libraries(imgui PUBLIC glfw)

# Tracy Parameters
option(TRACY_ENABLE "" ON)
option(TRACY_ON_DEMAND "" ON)

add_subdirectory(tracy)

add_subdirectory(glad)
